appId: host.exp.exponent
name: RN Login -> Dashboard
---
- launchApp
- openLink: exp://10.0.2.2:8081
- tapOn:
    text: "Continue"
    optional: true
- tapOn: "Sign In"
- tapOn: "Email address"
- inputText: "demo@careconnect.com"
- tapOn: "Password"
- inputText: "demo123"
- pressKey: Enter
- extendedWaitUntil:
    visible:
      text: "Today's Tasks"
    timeout: 8000
- assertVisible: "View all"
- assertVisible: "Pending"
- assertVisible: "Completed"
